k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-gamestore
  labels:
    name: fiap-gamestore
    environment: production
    project: fiap-cloud-games
